# pkg/service/question/controller.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"tchh.lucpham/pkg/common"
 	"tchh.lucpham/pkg/model"
 )
 
@@ -42,4 +43,38 @@ func (h *Handler) GetQuestions(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, data)
+}
+
+// Create godoc
+// @Summary create question
+// @Schemes
+// @Description create question
+// @Tags questions
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param question body model.CreateQuestionInput true "request body"
+// @Success 201 {object} model.Question
+// @Failure 400
+// @Router /questions [post]
+func (h *Handler) Create(c *gin.Context) {
+	// request body
+	var createQuestionInput model.CreateQuestionInput
+	err := common.ValidateBodyData(c, &createQuestionInput)
+	// error
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, model.Error{Error: err.Error()})
+		return
+	}
+	// create question
+	ownerId := c.Request.Header.Get(common.USER_ID_HEADER)
+	createQuestionInput.OwnerId = ownerId
+	question, err := h.service.Create(createQuestionInput)
+
+	// create failed
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, model.Error{Error: err.Error()})
+		return
+	}
+	c.JSON(http.StatusCreated, question)
 }
